[tool.poetry]
name = "nyc-taxy"
version = "0.1.0"
description = "Test dbt for aws glue"
authors = ["Bruno Soares <tsoares.bruno@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8<4"
aws-glue-sessions = "^0.37.0"
boto3 = "^1.26.52"
dbt-core = "^1.3.2"
dbt-glue = "^1.3.12"
jupyter-core = "^5.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
